DT-1827  Fix Blog Search widget form input alignment on iOS

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -653,6 +653,7 @@ hr.line {
 		vertical-align: bottom;
 		display: inline-block;
 		-webkit-appearance: none;
+		margin-bottom: 0;
 		@media @tablet {
 			width: 70%;
 			margin: 0;
